--- a/chatbot-api-interfaces/pom.xml
+++ b/chatbot-api-interfaces/pom.xml
@@ -83,13 +83,15 @@
             <version>5.8.10</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
             <groupId>cn.bugstack.ai</groupId>
             <artifactId>chatbot-api-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.13</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
